# Beheshti-NLP

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup_env.py  tree.txt  tutorials.md
app/: dependencies.py  main.py  schemas.py
app/api/: router.py
app/api/endpoints/: image_search.py  intent.py  keyword_extraction.py  keyword_extractor.py  ner.py  paraphraser.py  sentiment.py
app/config/: settings.py
app/models/: keyword_extractor.py  paraphraser.py
app/services/: Sentiment-Analysis - Version2.ipynb  Sentiment-Analysis-Version1.ipynb  image_search.py  index.py  intent_service.py  keyword_extraction_service.py  keyword_extractor_service.py  ner_service.py  paraphraser_service.py  sentiment_service.py  template.py  transformers_service.py
app/utils/: service_manager.py
