[tool.poetry]
name = "Giumeh NLP service"
version = "0.1.0"
description = ""
authors = ["Shayan Bemanian <shayan.bemanian@gmail.com>"]
readme = "README.md"
homepage = "https://giumeh.net/"
package-mode = false


[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
hazm = "^0.10.0"
keybert = "^0.8.4"
matplotlib = "^3.9.0"
nltk = "^3.8.1"
numpy = "^1.24.3"
pandas = "^1.4.3"
pillow = "^10.3.0"
pycocotools = "^2.0.7"
pydantic = "^2.7.1"
pytorch-lightning = "2.2.0"
scikit-learn = "^1.5.0"
seaborn = "^0.13.2"
torch = "^2.3.0"
tqdm = "^4.66.4"
transformers = "^4.41.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
